Completed all challenges

--- a/templates/horoscope_results.html
+++ b/templates/horoscope_results.html
@@ -4,11 +4,10 @@
         <title>Horoscope Results</title>
     </head>
     <body>
-        <!-- Your HTML code goes here! -->
-
-        
-
-        
-        
+        <h2>Greetings {{users_name}}!</h2>
+        <p>
+            Your sign is {{horoscope_sign}}, and your personality is {{personality}}.
+            Your lucky number is {{lucky_number}}
+        </p>
     </body>
 </html>
