--- a/templates/calculator_results.html
+++ b/templates/calculator_results.html
@@ -4,12 +4,6 @@
         <title>Calculator Results</title>
     </head>
     <body>
-        <!-- Your HTML code goes here! -->
-
-
-
-
-
-        
+        <p>You chose to {{operation}} {{operand_1}} and {{operand_2}}. Your result is: {{result}}</p>
     </body>
 </html>
